# yandex-cloud-mem

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  readme.md  setup.cfg
infrastructure/: .terraform.lock.hcl  cloud_config.yml  declaration.yml  index.html  main.tf  providers.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  ydb.tf
src/: Dockerfile  main.py
