[tool.poetry]
name = "fiit-cloud"
version = "0.1.0"
description = ""
authors = ["nikita <nichuse@doubletapp.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
asyncpg = "^0.25.0"
pytest = "^7.1.2"
gunicorn = "^20.1.0"
ydb = {extras = ["yc"], version = "^2.12.0"}
requests = "^2.27.0"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"